Hitting Stop in the browser during the creation of a virtual server or some other action will no longer cancel it, which prevents domains from being half created.
When the Apache virtual host *.domain exists and a new virtual host for something.domain is created, it is placed before *.domain in the Apache config file to give it precedence.
SSL can now be enabled for domains without a private IP address, for a single virtual server on each shared address. This means that on a typical single-IP system, you can have one SSL website. This replaces the --ip-primary flag to create-domain.pl.
The logrotate configuration is now validated by Virtualmin, to detect duplicate entries that can cause rotation to stop working.
The SpamAssassin version is validated as part of the configuration check, to ensure that it supports the needed --siteconfigpath parameter.
Vpopmail systems with so many domains that letter-suffix directories under /home/vpopmail/domains are needed are now handed by Virtualmin.
When a DNS domain is disabled, all records in it that use the domain name are renamed too, to keep BIND happy.
Added the --features-from-template parameter to create-domain.pl, to use features based on limits defined in the template.
If a script package cannot be downloaded from the vendor's website, Virtualmin will fall back to using a copy from scripts.virtualmin.com. This protects against changes made to script vendor's websites or download repositories.
---- Changes since 3.53 ----
When your Virtualmin Pro license is within 7 days of expiry, a notification is displayed on the system information page when the master administrator logs in.
Updated the LimeSurvey script installer to version 1.70, ZenPhoto to 1.1.5, phpMyAdmin to 2.11.5, and Flyspray to 0.9.9.5.
Fixed bugs in Plesk migration, and added automatic detection of alias domains in the original backup. SSL certificates and keys from the backup are also migrated.